--- a/.github/workflows/locat-CD.yaml
+++ b/.github/workflows/locat-CD.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  locat-CD:
+  LOCAT-CD:
     runs-on: ubuntu-latest
     permissions: read-all
     steps:
@@ -14,9 +14,12 @@ jobs:
 
       - name: Set properties for CD
         run: |
-          echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
-          echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
-        continue-on-error: true
+          cat <<EOF > ./src/main/resources/application-develop.yaml
+          ${{ secrets.APPLICATION_DEVELOP }}
+          EOF
+          cat <<EOF > ./src/main/resources/application-prod.yaml
+          ${{ secrets.APPLICATION_PROD }}
+          EOF
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
