--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -6,9 +6,9 @@ on:
     types: [ opened, reopened, synchronize, ready_for_review ]
 
 jobs:
-  locat-CI:
+  LOCAT-CI:
     runs-on: ubuntu-latest
-    permissions: read-all
+    permissions: write-all
 
     steps:
       - name: Checkout repository
@@ -38,34 +38,38 @@ jobs:
 
       - name: Set properties for CI
         run: |
-          echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
-          echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
+          cat <<EOF > ./src/main/resources/application-develop.yaml
+          ${{ secrets.APPLICATION_DEVELOP }}
+          EOF
+          cat <<EOF > ./src/main/resources/application-prod.yaml
+          ${{ secrets.APPLICATION_PROD }}
+          EOF
 
       - name: Build & Test with Gradle
-        run: ./gradlew clean build -x test
-#        continue-on-error: true
+        run: ./gradlew clean build
 
-#      알림 설정
-#      - name: Notify Discord on Test Failure
-#        if: failure()
-#        uses: Ilshidur/action-discord@v2
-#        with:
-#          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
-#          message: "⚠️ Tests failed in the CI pipeline!"
+      - name: Notify Discord on Test Failure
+        if: failure()
+        uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.WEBHOOK_URL }}
+        with:
+          args: "⚠️ Tests failed in the CI pipeline!"
 
       - name: Jacoco Report to PR
-        uses: madrapps/jacoco-report@v1.6.1
+        uses: madrapps/jacoco-report@v1.7.1
         if: success()
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/xml
+          paths: ${{ github.workspace }}/build/reports/jacoco/xml/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "⭐Coverage Report"
+          title: "⭐Test Coverage Report"
           update-comment: true
-          skip-if-no-changes: true
+          skip-if-no-changes: false
+          min-coverage-overall: '70'
 
-      - name: Upload jacoco Report
+      - name: Upload Jacoco Report
         uses: actions/upload-artifact@v4
         if: success()
         with:
-          name: jacoco-html-report-${{ github.run_number }}
+          name: jacoco-coverage-report-${{ github.run_number }}
           path: ${{ github.workspace }}/build/reports/jacoco/html
