--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -14,18 +14,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set-up Docker Compose
-        run:  |
-          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '\"' -f 4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
-
-      - name: Set-up Test Environment with Docker Compose
+      - name: Set-up Test Environment
         run: |
-          cat <<EOF > docker-compose.yaml
-          ${{ secrets.DOCKER_COMPOSE_INTEGRATION }}
-          EOF
-          docker-compose up -d
+          docker run -d --name LOCAT-Redis -p 6379:6379 redis:7.0.10
 
       - name: Set-up Java
         uses: actions/setup-java@v4
@@ -66,13 +57,11 @@ jobs:
 
       - name: Notify Discord on Test Failure
         if: failure()
+        uses: Ilshidur/action-discord@master
         env:
           DISCORD_WEBHOOK: ${{ secrets.WEBHOOK_URL }}
-        run: |
-          SUMMARY=${grep -A 10 "FAILURE:" build-report.txt | tail -n +1}
-          curl -H "Content-Type: application/json" \
-               -d "{\"content\": \"⚠️ CI Action Failed! \n [Root Cause] \n\`\`\`${SUMMARY}\`\`\`\"}" \
-               $DISCORD_WEBHOOK
+        with:
+          args: "⚠️ Tests failed in the CI pipeline!"
 
       - name: Comment on PR with Jacoco Report
         uses: madrapps/jacoco-report@v1.7.1
