Feat(LOCAT-BE-49): Add concurrency options
- CI/CD에 동시성 옵션 추가

--- a/.github/workflows/locat-CD.yaml
+++ b/.github/workflows/locat-CD.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
+concurrency:
+  group: locat-cd
+  cancel-in-progress: true
+
 jobs:
   LOCAT-CD:
     runs-on: ubuntu-latest
