--- a/docs/api/v1_common.yaml
+++ b/docs/api/v1_common.yaml
@@ -15,9 +15,20 @@ paths:
       responses:
         200:
           $ref: "#/components/responses/TermsListResponse"
+    post:
+      description: "약관 등록 또는 수정 API (약관 타입별로 최신 버전이 하나만 존재)"
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        $ref: "#/components/requestBodies/TermsUpsertRequest"
+      responses:
+        200:
+          $ref: "#/components/responses/TermsResponse"
   /v1/terms/{type}:
     get:
       description: "타입별 개별 최신 약관 조회 API"
+      security:
+        - bearerAuth: [ ]
       parameters:
         - name: type
           in: path
@@ -34,13 +45,70 @@ paths:
               - "LOCATION_POLICY"
               - "MARKETING_POLICY"
               - "MARKETING_KAKAO_POLICY"
-      security:
-        - bearerAuth: [ ]
       responses:
         200:
           $ref: "#/components/responses/TermsResponse"
         400:
           description: "Bad Request: type 입력이 잘못된 경우"
+  /v1/terms/{type}/revisions:
+    get:
+      description: "타입별 약관 개정 이력 조회 API"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: type
+          in: path
+          description: "조회할 약관의 타입(Non-Case Sensitive)"
+          required: true
+          example: "TERMS_OF_SERVICE"
+          schema:
+            type: string
+            default: "TERMS_OF_SERVICE"
+            enum:
+              - "TERMS_OF_SERVICE"
+              - "PRIVACY_POLICY"
+              - "OVER_14_POLICY"
+              - "LOCATION_POLICY"
+              - "MARKETING_POLICY"
+              - "MARKETING_KAKAO_POLICY"
+      responses:
+        200:
+          $ref: "#/components/responses/TermsRevisionResponse"
+        400:
+          description: "Bad Request: type 입력이 잘못된 경우"
+  /v1/terms/{type}/revisions/{version}:
+    get:
+      description: "타입별 특정 버전 약관 조회 API"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: type
+          in: path
+          description: "조회할 약관의 타입(Non-Case Sensitive)"
+          required: true
+          example: "TERMS_OF_SERVICE"
+          schema:
+            type: string
+            default: "TERMS_OF_SERVICE"
+            enum:
+              - "TERMS_OF_SERVICE"
+              - "PRIVACY_POLICY"
+              - "OVER_14_POLICY"
+              - "LOCATION_POLICY"
+              - "MARKETING_POLICY"
+              - "MARKETING_KAKAO_POLICY"
+        - name: version
+          in: path
+          description: "조회할 약관의 버전"
+          required: true
+          example: "1.0"
+          schema:
+            type: string
+      responses:
+        200:
+          $ref: "#/components/responses/TermsResponse"
+        400:
+          description: "Bad Request: type 또는 version 입력이 잘못된 경우"
   /v1/categories:
     get:
       description: "카테고리 목록 조회 API"
@@ -83,6 +151,13 @@ paths:
         400:
           description: "Bad Request: type 입력이 잘못된 경우"
 components:
+  requestBodies:
+    TermsUpsertRequest:
+      description: "약관 등록/수정 요청"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/TermsUpsertRequest"
   responses:
     TermsListResponse:
       description: "약관 목록 조회 응답"
@@ -96,7 +171,7 @@ components:
                   data:
                     type: array
                     items:
-                      $ref: "#/components/schemas/TermsResponse"
+                      $ref: "#/components/schemas/TermsListResponse"
     TermsResponse:
       description: "약관 조회 응답"
       content:
@@ -110,6 +185,19 @@ components:
                     type: object
                     items:
                       $ref: "#/components/schemas/TermsResponse"
+    TermsRevisionResponse:
+      description: "타입별 약관 개정 이력 조회 응답"
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "schemas.yaml#/components/schemas/BaseResponse"
+              - type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/TermsRevisionResponse"
     CategoryInfoResponse:
       description: "카테고리 목록 조회 응답"
       content:
@@ -150,9 +238,43 @@ components:
                     items:
                       $ref: "#/components/schemas/FaqResponse"
   schemas:
+    TermsUpsertRequest:
+      type: object
+      properties:
+        type:
+          type: string
+          enum:
+            - "TERMS_OF_SERVICE"
+            - "PRIVACY_POLICY"
+            - "OVER_14_POLICY"
+            - "LOCATION_POLICY"
+            - "MARKETING_POLICY"
+            - "MARKETING_KAKAO_POLICY"
+          default: "TERMS_OF_SERVICE"
+          description: "약관 타입(Non-Case Sensitive)"
+        isRequired:
+          type: boolean
+          description: "필수 여부"
+          example: true
+        title:
+          type: string
+          description: "제목"
+          example: "LOCAT 서비스 이용 약관"
+        content:
+          type: string
+          description: "본문"
+          example: "제1조 (목적) 본 약관은 LOCAT(이하 '회사'라 함)이 제공하는 서비스(이하 '서비스'라 함)를 이용함에 있어 회사와 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다."
+        revisionNote:
+          type: string
+          description: "개정 이유"
+          example: "개인정보 처리 방침 변경"
     TermsResponse:
       type: object
       properties:
+        id:
+          type: integer
+          description: "약관 ID"
+          example: 3
         type:
           type: string
           enum:
@@ -176,10 +298,47 @@ components:
           type: string
           format: date-time
           description: "등록일시"
-        updatedAt:
+    TermsListResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: "약관 ID"
+          example: 3
+        type:
+          type: string
+          enum:
+            - "TERMS_OF_SERVICE"
+            - "PRIVACY_POLICY"
+            - "OVER_14_POLICY"
+            - "LOCATION_POLICY"
+            - "MARKETING_POLICY"
+            - "MARKETING_KAKAO_POLICY"
+          default: "TERMS_OF_SERVICE"
+          description: "약관 타입(Non-Case Sensitive)"
+        title:
+          type: string
+          description: "제목"
+          example: "LOCAT 서비스 이용 약관"
+        createdAt:
           type: string
           format: date-time
-          description: "수정일시"
+          description: "등록일시"
+    TermsRevisionResponse:
+      type: object
+      properties:
+        version:
+          type: string
+          description: "약관 버전"
+          example: "1.0"
+        revisionNote:
+          type: string
+          description: "개정 이유"
+          example: "개인정보 처리 방침 변경"
+        createdAt:
+          type: string
+          format: date-time
+          description: "개정일시"
     CategoryInfoResponse:
       type: object
       properties:
